--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,13 @@ cmake_minimum_required(VERSION 3.2)
 
 project(root)
 
-OPTION(BUILD_TESTS "Build with tests" ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+option(BUILD_TESTS "Build with tests" ON)
+option(BUILD_TBB "Build with private tbb" ON)
 
-MESSAGE(INFO "--------------------------------")
-MESSAGE(STATUS "Build with tests: ${BUILD_TESTS}")
-MESSAGE(INFO "--------------------------------")
+message(INFO "--------------------------------")
+message(STATUS "Build with tests: ${BUILD_TESTS}")
+message(INFO "--------------------------------")
 
 set(CMAKE_CXX_STANDARD 17)
 if(MSVC)
@@ -32,10 +34,12 @@ set(BOAT_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/)
 include_directories(${BOAT_INSTALL_INCLUDE_DIR})
 include_directories(${BOAT_HEADERS_DIR})
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
+message("---------" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+if (NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+endif()
 add_subdirectory(thirdparty)
 add_subdirectory(src)
 if(BUILD_TESTS)
