--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tests/lib/googletest"]
 	path = tests/lib/googletest
 	url = https://github.com/google/googletest.git
+[submodule "thirdparty/oneTBB"]
+	path = thirdparty/oneTBB
+	url = https://github.com/oneapi-src/oneTBB.git
